@@ -1,6 +1,8 @@
 content	avim	content/
 
 locale	avim	en		locale/en-US/
+
+locale	avim	de		locale/de/
 locale	avim	es		locale/es/
 locale	avim	fr		locale/fr-FR/
 locale	avim	vi		locale/vi/
