@@ -1,3 +1,5 @@
+@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
+
 #results-tree treechildren::-moz-tree-cell(pass) {
 	background-color: #90ee90;
 }
