@@ -1,0 +1,47 @@
+<!ENTITY AVIM.label "AVIM">
+<!ENTITY avim-menu.label "Vietnamesische Eingabe">
+<!ENTITY avim-menu.accesskey "V">
+
+<!-- Input method menu ===================================================== -->
+
+<!ENTITY avim-enabled.modifiers "accel alt">
+<!ENTITY avim-enabled.key "V">
+<!ENTITY avim-enabled.label "Aktiviert">
+<!ENTITY avim-enabled.accesskey "A">
+<!ENTITY avim-enabled.description "&AVIM.label; für Vietnamesische Eingabe aktivieren">
+<!ENTITY avim-disabled.label "Deaktiviert">
+
+<!ENTITY avim-prev-method.modifiers "accel">
+<!ENTITY avim-prev-method.key ";"><!-- to the left of : on German, Austrian, and Swiss keyboards -->
+<!ENTITY avim-menu-prev-method.label "Vorherige Eingabemethode">
+<!ENTITY avim-menu-prev-method.accesskey "V">
+
+<!ENTITY avim-next-method.modifiers "accel">
+<!ENTITY avim-next-method.key ":"><!-- to the right of ; on German, Austrian, and Swiss keyboards -->
+<!ENTITY avim-menu-next-method.label "Nächste Eingabemethode">
+<!ENTITY avim-menu-next-method.accesskey "N">
+
+<!ENTITY avim-auto.label "Automatisch">
+<!ENTITY avim-auto.accesskey "A">
+<!ENTITY avim-telex.label "Telex">
+<!ENTITY avim-telex.accesskey "T">
+<!ENTITY avim-vni.label "VNI">
+<!ENTITY avim-vni.accesskey "V">
+<!ENTITY avim-viqr.label "VIQR">
+<!ENTITY avim-viqr.accesskey "Q">
+<!ENTITY avim-viqr-star.label "VIQR*">
+<!ENTITY avim-viqr-star.accesskey "R">
+
+<!-- Options =============================================================== -->
+
+<!ENTITY avim-spell.modifiers "accel alt">
+<!ENTITY avim-spell.key "S">
+<!ENTITY avim-spell.label "Rechtschreibprüfung erzwingen">
+<!ENTITY avim-spell.accesskey "R">
+<!ENTITY avim-spell.description "Betonungszeichen nur auf Wörter setzten, die den vietnamesischen Rechtschreibregeln entsprechen">
+
+<!ENTITY avim-oldaccents.modifiers "accel alt">
+<!ENTITY avim-oldaccents.key ";">
+<!ENTITY avim-oldaccents.label "Klassische Betonungszeichen">
+<!ENTITY avim-oldaccents.accesskey "l">
+<!ENTITY avim-oldaccents.description "Ein Betonungszeichen über den ersten Vokal im endbetonten Diphthong setzen">
