@@ -1,0 +1,12 @@
+# Test Suite ###################################################################
+
+# $if{Debug}
+tester-button.label=Testreihe starten…
+tester-button.accesskey=s
+# $endif{}
+
+# Mudim Monitor ################################################################
+
+mudim-note.label=Mudim ist ebenfalls aktiviert und könnte auf AVIM störend einwirken.
+mudim-button.label=Mudim deaktivieren
+mudim-button.accesskey=u
