@@ -1,7 +1,5 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
-/*** Add-ons ******************************************************************/
-
 extension[name="AVIM"] .extension-icon,
 richlistitem[name="AVIM"] .addonIcon {
 	display: none !important;
@@ -12,8 +10,6 @@ richlistitem[name="AVIM"] #ExtensionIcon {
 	list-style-image: url("chrome://avim/skin/avim32.png");
 	display: -moz-box;
 }
-
-/*** AVIM Preferences *********************************************************/
 
 #avim-preferences prefpane {
 	background-image: url("chrome://avim/skin/avim45.png");
